<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/blue_grey_dark"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_grey_dark"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            style="@style/CardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentPadding="@dimen/padding_activity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_overview_label"
                    style="@style/OverviewLabelStyle"
                    android:layout_marginBottom="@dimen/margin_activity"
                    android:text="@string/synopsis" />

                <TextView
                    android:id="@+id/tv_overview"
                    style="@style/BasicTextStyle"
                    android:textColor="@android:color/white"
                    tools:text="over view" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/CardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentPadding="@dimen/padding_activity">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_vote_average_label"
                    style="@style/OverviewLabelStyle"
                    android:paddingBottom="@dimen/padding_vote_average_label"
                    android:text="@string/vote_average"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/iv_star"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_star"
                    android:layout_width="@dimen/size_star_image"
                    android:layout_height="@dimen/size_star_image"
                    android:contentDescription="@string/star_content_description"
                    android:src="@drawable/star"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tv_vote_average"
                    app:layout_constraintHorizontal_bias="0.25"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_vote_average_label"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/tv_vote_average"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_vote_average"
                    android:layout_marginLeft="@dimen/margin_vote_average"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guideline"
                    app:layout_constraintLeft_toRightOf="@+id/iv_star"
                    app:layout_constraintTop_toBottomOf="@+id/tv_vote_average_label"
                    tools:text="6.8" />

                <TextView
                    android:id="@+id/tv_vote_ten"
                    style="@style/BasicTextStyle"
                    android:layout_marginLeft="@dimen/margin_vote_ten"
                    android:layout_marginStart="@dimen/margin_vote_ten"
                    android:text="@string/ten"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_vote_average"
                    app:layout_constraintEnd_toStartOf="@id/tv_vote_count"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toTopOf="@+id/tv_vote_average"
                    tools:text="/10" />

                <ImageView
                    android:id="@+id/iv_person"
                    android:layout_width="@dimen/size_person_image"
                    android:layout_height="@dimen/size_person_image"
                    android:contentDescription="@string/person_content_description"
                    android:src="@drawable/person"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tv_vote_count"
                    app:layout_constraintTop_toBottomOf="@+id/tv_vote_average_label" />

                <TextView
                    android:id="@+id/tv_vote_count"
                    style="@style/BasicTextStyle"
                    android:layout_marginEnd="@dimen/margin_vote_count"
                    android:layout_marginRight="@dimen/margin_vote_count"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_person"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/iv_person"
                    app:layout_constraintVertical_bias="0.0"
                    tools:text="9,314" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/CardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentPadding="@dimen/padding_activity">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_detail_label"
                    style="@style/OverviewLabelStyle"
                    android:text="@string/details" />

                <TextView
                    android:id="@+id/tv_original_title_label"
                    style="@style/DetailTextLabelStyle"
                    android:paddingTop="@dimen/margin_activity_small"
                    android:text="@string/original_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_label" />

                <TextView
                    android:id="@+id/tv_original_title"
                    style="@style/DetailTextStyle"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tv_original_title_label"
                    app:layout_constraintStart_toEndOf="@+id/tv_release_date_label"
                    tools:text="Deadpool 2" />

                <TextView
                    android:id="@+id/tv_release_date_label"
                    style="@style/DetailTextLabelStyle"
                    android:text="@string/release_date"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_original_title" />

                <TextView
                    android:id="@+id/tv_release_date"
                    style="@style/DetailTextStyle"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tv_release_date_label"
                    app:layout_constraintStart_toEndOf="@+id/tv_release_date_label"
                    tools:text="2018-06-18" />

                <TextView
                    android:id="@+id/tv_adult_label"
                    style="@style/DetailTextLabelStyle"
                    android:text="@string/adults"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_popul_label" />

                <TextView
                    android:id="@+id/tv_adult"
                    style="@style/DetailTextStyle"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tv_adult_label"
                    app:layout_constraintStart_toEndOf="@+id/tv_release_date_label"
                    tools:text="No" />

                <TextView
                    android:id="@+id/tv_language_label"
                    style="@style/DetailTextLabelStyle"
                    android:text="@string/language"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_adult_label" />

                <TextView
                    android:id="@+id/tv_language"
                    style="@style/DetailTextStyle"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tv_language_label"
                    app:layout_constraintStart_toEndOf="@+id/tv_release_date_label"
                    tools:text="English" />

                <TextView
                    android:id="@+id/tv_popul_label"
                    style="@style/DetailTextLabelStyle"
                    android:text="@string/popularity"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_release_date_label" />

                <TextView
                    android:id="@+id/tv_popul"
                    style="@style/DetailTextStyle"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tv_popul_label"
                    app:layout_constraintStart_toEndOf="@+id/tv_release_date_label"
                    tools:text="0.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/CardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentPadding="@dimen/padding_activity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_trailer"
                    style="@style/OverviewLabelStyle"
                    android:layout_marginBottom="@dimen/margin_activity"
                    android:text="@string/trailer" />

                <com.halilibo.bvpkotlin.BetterVideoPlayer
                    xmlns:bvp="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/bvp"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    bvp:bvp_captionColor="#e7e7e7"
                    bvp:bvp_captionSize="20sp"
                    bvp:bvp_hideControlsOnPlay="true"
                    bvp:bvp_showBottomProgressBar="true"
                    bvp:bvp_showTotalDuration="false"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
